# myscrollr

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTH_SSE_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MASTER_PLAN.md  PLAN.md  README.md  RSS_PLAN.md  SECURITY.md  STANDARDIZATION_PLAN.md  SYNC_SETTINGS_PLAN.md  YAHOO_AUTH_FIX.md  deployment-bggg0gskc8s4gwcs0cs4gkw8-all-logs-2026-02-04-23-07-15.txt  index.html  nixpacks.toml  package-lock.json  package.json  test-migrations.sh  v1_checklist.md
.github/workflows/: auto-close-osticket.yml  deploy.yml  desktop-release.yml
api/: .gitignore  CHANNELS.md  Dockerfile  INTEGRATIONS.md  auth.go  constants.go  database.go  docker-compose.dev.yml  events.go  extension_auth.go  go.mod  go.sum  handlers_stream.go  handlers_webhook.go  helpers.go  main.go  models.go  preferences.go  redis.go  rss.go  streams.go  users.go  yahoo.go  yahoo_models.go
api/core/: ai_triage.go  auth.go  billing.go  channels.go  constants.go  database.go  discord.go  discovery.go  events.go  events_cache_test.go  extension_auth.go  handlers_account.go  handlers_business_leads.go  handlers_channel.go  handlers_discord_interactions.go  handlers_github_webhook.go  handlers_osticket_webhook.go  handlers_public.go  handlers_resend_webhook.go  handlers_stream.go  handlers_webhook.go  helpers.go  helpers_test.go  invite.go  log_helpers.go  logto_admin.go  models.go  preferences.go  proxy.go  redis.go  registry.go  sentry_scrubbing_test.go  server.go  streams.go  stripe_webhook.go  support.go  support_drafts.go  support_test.go  tier_limits.go  tier_limits_test.go  (+2 more)
api/integration/: integration.go
api/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_add_subscription_tier.down.sql  000002_add_subscription_tier.up.sql  000003_add_lifetime.down.sql  000003_add_lifetime.up.sql  000004_webhook_events_ttl.down.sql  000004_webhook_events_ttl.up.sql  000005_user_deletion_requests.down.sql  000005_user_deletion_requests.up.sql  000006_lifetime_index.down.sql  000006_lifetime_index.up.sql  000009_support_drafts_thread_entry.down.sql  000009_support_drafts_thread_entry.up.sql  000012_support_ticket_threads.down.sql  000012_support_ticket_threads.up.sql  001_rename_tiers.sql
channels/fantasy/: .env.example  docker-compose.yml  manifest.json
channels/finance/: .env.example  docker-compose.yml
channels/finance/service/: Cargo.toml  Dockerfile
channels/finance/service/configs/: subscriptions.json
channels/finance/service/migrations/: 110000000001_initial.down.sql  110000000002_add_name_category.up.sql  20250331000001_add_exchange_link.down.sql  20250331000001_add_exchange_link.up.sql  20250601000001_initial.up.sql  20250601000002_add_name_category.down.sql
channels/finance/service/src/: database.rs  lib.rs  log.rs  main.rs  types.rs  websocket.rs
channels/finance/service/tests/: migration_versions.rs  readiness_http.rs
channels/rss/: .env.example  docker-compose.yml  manifest.json
channels/rss/service/: Cargo.toml  Dockerfile
channels/rss/service/configs/: feeds.json  feeds.test.json
channels/rss/service/migrations/: 20250601000001_initial.down.sql  20250601000001_initial.up.sql  20250601000002_add_failure_tracking.down.sql  20250601000002_add_failure_tracking.up.sql
channels/rss/service/src/: database.rs  lib.rs  log.rs  main.rs  types.rs
channels/rss/service/tests/: migration_versions.rs  readiness_http.rs
channels/sports/: docker-compose.yml  manifest.json
desktop/: .env.example  DASHBOARD_REWORK_PLAN.md  app.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/screenshots/: README.md
desktop/src/: App.tsx  auth.ts  (+17 more)
desktop/src-tauri/: CSP_NOTES.md  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  ticker.json
desktop/src-tauri/dmg/: README.md  background.tiff
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
desktop/src-tauri/src/commands/: appbar_win.rs  auth.rs  diagnostics.rs  gpu_win.rs  mod.rs  sse.rs  system_info.rs  window.rs
desktop/src-tauri/src/compositor/: hyprland.rs  kwin.rs  mod.rs  sway.rs
docs/: cdc-runbook.md  k8s-migration-runbook.md  secure.md  yahoo-sync-implementation-plan.md
extension/: CLAUDE.md  ROADMAP.md  SPEC.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
ingestion/: .env.example  Cargo.toml  GEMINI.md  Makefile  README.md
ingestion/rss_service/: Cargo.toml  Dockerfile
ingestion/rss_service/configs/: feeds.json
ingestion/rss_service/src/: database.rs  lib.rs  log.rs  main.rs  types.rs
ingestion/scrollr_backend/: Cargo.toml  Dockerfile
ingestion/scrollr_backend/src/: database.rs  lib.rs  log.rs  main.rs
ingestion/yahoo_service/: Cargo.toml  Dockerfile
ingestion/yahoo_service/src/: database.rs  lib.rs  log.rs  main.rs  types.rs
ingestion/yahoo_service/yahoo_fantasy/src/: api.rs  backup  debug.rs  error.rs  lib.rs  stats.rs  types.rs  xml_leagues.rs  xml_matchups.rs  xml_settings.rs  xml_standings.rs
integrations/: INTEGRATIONS.md  MARKETPLACE.md
integrations/fantasy/service/yahoo_fantasy/: Cargo.toml
integrations/fantasy/service/yahoo_fantasy/src/: error.rs  lib.rs  stats.rs  utilities.rs
integrations/finance/service/: Cargo.toml
integrations/finance/service/configs/: subscriptions.json
integrations/finance/service/src/: lib.rs  log.rs  main.rs  types.rs  websocket.rs
k8s/: cert-manager.yaml  configmap-channels.yaml  configmap-core.yaml  core-api.yaml  fantasy-api.yaml  finance-api.yaml  finance-service.yaml  ingress.yaml  namespace.yaml  rss-api.yaml  rss-service.yaml  secrets.yaml.template  sports-api.yaml  sports-service.yaml  website.yaml
myscrollr.com/: .cta.json  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  SCREENSHOTS.md  backend_readme.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plans/: dashboard-fix-and-integrations-refactor.md
scripts/: .env.example  invite-super-users.go
testing/: .env.test  README.md
(+625 files in other folders)
