[package]
name = "scrollr-desktop"
version = "0.9.6"
edition = "2021"

[lib]
name = "scrollr_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde_json = "1"
tauri-plugin-http = "2.5.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-mcp-bridge = "0.9"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Com"] }

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
