[package]
name = "scrollr_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
futures-util = "0.3"
axum = { version = "0.8", features = ["macros", "json"] }
axum-extra = { version = "0.12", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls-acme = { version = "0.8", features = ["axum"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower-http = { version = "0.6", features = ["set-header", "cors"] }
secrecy = { version = "0.10", features = ["serde"] }
rcgen = "0.13"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
redis = { version = "0.28", features = ["tokio-rustls-comp"] }
deadpool-redis = "0.19"

yahoo_fantasy = { path = "../yahoo_fantasy" }