[package]
name = "yahoo_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync"] }
axum = { version = "0.8", features = ["macros", "json"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
redis = { version = "0.28", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
yahoo_fantasy = { path = "./yahoo_fantasy" }
secrecy = "0.10"
futures-util = "0.3"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
