[package]
name = "finance_service"
version = "0.1.0"
edition = "2024"
description = "Scrollr finance channel ingestion service — streams real-time market data via TwelveData WebSocket."
authors = ["Brandon Ruth <brandon@myscrollr.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/brandon-relentnet/myscrollr"
homepage = "https://myscrollr.com"
publish = false

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.28", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
serde_json = "1.0"
reqwest = "0.12"
axum = { version = "0.8", features = ["macros", "json"] }
dotenv = "0.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "migrate"] }