[package]
name = "rss_service"
version = "0.1.0"
edition = "2024"
description = "Scrollr RSS channel ingestion service — polls RSS/Atom feeds and normalizes them for the dashboard."
authors = ["Brandon Ruth <brandon@myscrollr.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/brandon-relentnet/myscrollr"
homepage = "https://myscrollr.com"
publish = false

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["json"] }
dotenvy = "0.15"
log = "0.4"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "migrate"] }
feed-rs = "2.3"
