[package]
name = "finance_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.28", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
serde_json = "1.0"
reqwest = "0.12"
axum = { version = "0.8", features = ["macros", "json"] }
dotenv = "0.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }