[package]
name = "yahoo_fantasy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "5.0"
quick-xml = "0.38"
serde-xml-rs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = { version = "0.10", features = ["serde"] }
log = "0.4"